Fix flakiness in PasswordManagerBrowserTestBase

Bug: 794864, 799924
Change-Id: I664472e17a04b8dd421522aa948c058892bd0ac5